# Adafruit-Feather-RP2040-PCB

./: Adafruit Feather RP2040 Original.brd  Adafruit Feather RP2040 rev B.sch  Adafruit Feather RP2040.sch  Adafruit Feather RP4020 rev B.brd  README.md
feather_test/: CMakeLists.txt  feather_test.c
